gobmkida/g2/make_worms
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/engine/worm.c:863:24: error: use of undeclared identifier 'libs_1'
v24 = findlib( n, 241, libs_1); 
                       ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/engine/worm.c:870:7: error: use of undeclared identifier 'libs_1'
v26 = libs_1[v25]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/engine/worm.c:967:25: error: use of undeclared identifier 'byte_A12ADF'
v39 = ( unsigned __int8)byte_A12ADF[jj]; 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/engine/worm.c:1390:28: error: use of undeclared identifier 'libs_0'
v104 = findlib( v100, 241, libs_0); 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/engine/worm.c:1398:8: error: use of undeclared identifier 'libs_0'
v106 = libs_0[v105]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/engine/worm.c:1417:8: error: use of undeclared identifier 'libs_0'
v108 = libs_0[v105] + *v107; 
       ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/make_worms/src/obj/1/worm.o] Error 1
